# evdevhook

./: .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml
config_templates/: CONFIG_FORMAT.md  README.md  dualsense.json  nintendo.json  playstation.json
src/: VirtualDevice.cpp  VirtualDevice.hpp  constants.hpp  globals.hpp  main.cpp  packet.cpp  packet.hpp
